--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-# --- For-Bot-Working --------- #
 pyrogram
 TgCrypto
 pyromod==1.5
-# --- For-Database ------------ #
 pymongo
 dnspython
-# --- For-Web-Response ------- #
-aiohttp
+Flask==2.2.2
+gunicorn==20.1.0
+aiohttp==3.8.1
